--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "author": "hoafn0730",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.3"
+        "express": "^4.18.3",
+        "express-handlebars": "^7.1.2",
+        "morgan": "^1.10.0",
+        "mysql2": "^3.9.2",
+        "sequelize": "^6.37.1"
     },
     "devDependencies": {
-        "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0",
+        "sequelize-cli": "^6.6.2"
     }
 }
