--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sequelize": "^6.37.1"
     },
     "devDependencies": {
+        "babel-plugin-module-resolver": "^5.0.0",
         "nodemon": "^3.1.0",
         "sequelize-cli": "^6.6.2"
     }
