--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon src/index.js",
+        "watch": "node-sass --watch src/sass/ --output src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "hoafn0730",
@@ -14,6 +15,7 @@
         "express-handlebars": "^7.1.2",
         "morgan": "^1.10.0",
         "mysql2": "^3.9.2",
+        "node-sass": "^9.0.0",
         "sequelize": "^6.37.1"
     },
     "devDependencies": {
