--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
+        "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "mysql2": "^3.9.2",
         "node-sass": "^9.0.0",
