--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "hoafn0730",
     "license": "ISC",
     "dependencies": {
+        "connect-flash": "^0.1.1",
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.0",
         "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "mysql2": "^3.9.2",
