--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
         "express-session": "^1.18.0",
+        "joi": "^17.12.3",
         "method-override": "^3.0.0",
         "morgan": "^1.10.0",
         "mysql2": "^3.9.2",
