--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
     "license": "ISC",
     "dependencies": {
         "connect-flash": "^0.1.1",
+        "cors": "^2.8.5",
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
         "express-session": "^1.18.0",
+        "helmet": "^7.1.0",
         "joi": "^17.12.3",
         "method-override": "^3.0.0",
+        "module-alias": "^2.2.3",
+        "moment": "^2.30.1",
         "morgan": "^1.10.0",
         "mysql2": "^3.9.2",
         "node-sass": "^9.0.0",
         "sequelize": "^6.37.1"
     },
     "devDependencies": {
-        "babel-plugin-module-resolver": "^5.0.0",
         "nodemon": "^3.1.0",
         "sequelize-cli": "^6.6.2"
+    },
+    "_moduleAliases": {
+        "~": "./src"
     }
 }
