--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "author": "hoafn0730",
     "license": "ISC",
     "dependencies": {
+        "app-root-path": "^3.1.0",
+        "bcryptjs": "^2.4.3",
         "connect-flash": "^0.1.1",
         "cors": "^2.8.5",
         "express": "^4.18.3",
@@ -22,9 +24,11 @@
         "module-alias": "^2.2.3",
         "moment": "^2.30.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^3.9.2",
         "node-sass": "^9.0.0",
-        "sequelize": "^6.37.1"
+        "sequelize": "^6.37.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.0",
