--- a/.env
+++ b/.env
@@ -1,6 +1,15 @@
 NODE_ENV=development
 PORT=5000
 
+SECRET_KEY=hoafn0730
+JWT_EXPIRES_IN=1h
+
+# 7d
+MAX_AGE_ACCESS_TOKEN=252000000
+
+# 1M
+MAX_AGE_REFRESH_TOKEN=1008000000
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
