--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "app-root-path": "^3.1.0",
         "bcryptjs": "^2.4.3",
         "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
         "express-session": "^1.18.0",
         "helmet": "^7.1.0",
-        "joi": "^17.12.3",
+        "joi": "^17.13.1",
+        "jsonwebtoken": "^9.0.2",
         "method-override": "^3.0.0",
         "module-alias": "^2.2.3",
         "moment": "^2.30.1",
