--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "mysql2": "^3.9.2",
         "node-sass": "^9.0.0",
         "sequelize": "^6.37.1",
+        "socket.io": "^4.7.5",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
