--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "author": "hoafn0730",
     "license": "ISC",
+    "engines": {
+        "node": "20.x"
+    },
     "dependencies": {
         "app-root-path": "^3.1.0",
         "bcryptjs": "^2.4.3",
