--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT=5000
 
 SECRET_KEY=hoafn0730
 JWT_EXPIRES_IN=1h
+SSO_BACKEND_URL=http://localhost:8080
 
 # 7d
 MAX_AGE_ACCESS_TOKEN=252000000
@@ -10,9 +11,9 @@ MAX_AGE_ACCESS_TOKEN=252000000
 # 1M
 MAX_AGE_REFRESH_TOKEN=1008000000
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=codelearn_db
-DB_USERNAME=root
-DB_PASSWORD=123456
+DB_CONNECTION=postgres
+DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_PORT=6543
+DB_DATABASE=postgres
+DB_USERNAME=postgres.fwptwwlovbcbhhnfyzxf
+DB_PASSWORD=hoafn0730-fdemy-database@Aa
