--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-    "name": "codelearn_be",
+    "name": "fdemy_be",
     "version": "1.0.0",
     "description": "codelearn_be",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon src/index.js",
-        "watch": "node-sass --watch src/sass/ --output src/public/css/",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
+        "clean": "rm -rf build && mkdir build",
+        "build-babel": "babel ./src -d ./build/src",
+        "build": "npm run clean && npm run build-babel",
+        "production": "cross-env BUILD_MODE=production  && node ./src/index.js",
+        "dev": "cross-env BUILD_MODE=dev nodemon --exec babel-node ./src/index.js"
     },
     "author": "hoafn0730",
     "license": "ISC",
@@ -14,16 +17,20 @@
         "node": "20.x"
     },
     "dependencies": {
+        "@babel/runtime": "^7.22.10",
         "app-root-path": "^3.1.0",
+        "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
         "connect-flash": "^0.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "express-handlebars": "^7.1.2",
         "express-session": "^1.18.0",
         "helmet": "^7.1.0",
+        "http-status-codes": "^2.3.0",
         "joi": "^17.13.1",
         "jsonwebtoken": "^9.0.2",
         "method-override": "^3.0.0",
@@ -33,11 +40,21 @@
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.9.2",
         "node-sass": "^9.0.0",
+        "pg": "^8.13.0",
+        "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.1",
         "socket.io": "^4.7.5",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.22.10",
+        "@babel/core": "^7.22.10",
+        "@babel/eslint-parser": "^7.22.10",
+        "@babel/node": "^7.22.10",
+        "@babel/plugin-transform-runtime": "^7.22.10",
+        "@babel/preset-env": "^7.22.10",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "eslint": "^8.47.0",
         "nodemon": "^3.1.0",
         "sequelize-cli": "^6.6.2"
     },
