--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 NODE_ENV=development
-PORT=5001
+PORT=5000
 
 SECRET_KEY=hoafn0730
 JWT_EXPIRES_IN=1h
 SSO_BACKEND_URL=http://localhost:8080
+GEMINI_API_KEY=AIzaSyATKG2meJURFO4jq2Px3T6rip4AnLxIUhM
 
 # 7d
 MAX_AGE_ACCESS_TOKEN=252000000
