--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.22.10",
+        "@google/genai": "^0.9.0",
         "app-root-path": "^3.1.0",
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
