--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=5000
 SECRET_KEY=hoafn0730
 JWT_EXPIRES_IN=1h
 SSO_BACKEND_URL=http://localhost:8080
+GEMINI_API_KEY=AIzaSyATKG2meJURFO4jq2Px3T6rip4AnLxIUhM
 
 # 7d
 MAX_AGE_ACCESS_TOKEN=252000000
